Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18409

If fullscreen application without softkeys opens a fullscreen child dialog with softkeys, once the child dialog closes, softkeys remain visible on application main screen.

    XMLWordPrintable

Details

    • 54601b563fb1935c901fc99046ca35dd6d90d1c7

    Description

      Use attached application to reproduce:

      1) Launch the application -> Main window is shown without softkeys.
      2) Click on "dialog with softkeys" button -> A new fullscreen dialog with softkeys visible is opened.
      3) Click "OK" button

      Expected result: Dialog is closed and main window is shown without any softkeys visible.

      Actual result: Dialog is closed and main window is shown. Main window has exit softkey visible.

      If you use "Switch" button to change the dialog mode to "maximized" from default (fullscreen with SK), then the softkeys will not be shown on main window when dialog is closed.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            e0348803 Miikka Heikkinen
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes