Do not set focus unnecessarily at window activation in Symbian

Calling QSymbianControl::setFocusSafely(true) on currently focused
window causes the next window in stack to get the focus momentarily,
leading to various softkey problems, such as leaving child window's
softkeys around when child is closed and flickering softkeys when child
is opened. Added a check to QWidget::activateWindow to avoid calling
setFocusSafely for already focused windows.

Task-number: QTBUG-18409
Reviewed-by: Sami Merila
Reviewed-by: axis